# Roundcube-Session-Decrypt

./: README.md  pyproject.toml  roundcube_session_decrypt.py
php_deserializer/: __init__.py  deserializer.py  session_deserializer.py
roundcube_session_decrypt/: cli.py
tripledes/: __init__.py  tripledes_decryptor.py
