[tool.poetry]
name = "roundcube-session-decrypt"
version = "0.1.0"
description = ""
authors = ["Raphael Dray <dray.raph@gmail.com>"]
readme = "README.md"
packages = [
    { include = "php_deserializer" },
    { include = "tripledes" }
]

[tool.poetry.dependencies]
python = "^3.11"
phpserialize = "^1.3"
pycryptodome = "^3.23.0"

[tool.poetry.scripts]
roundcube-session-decrypt = "roundcube_session_decrypt.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
